<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="se.yverling.wearto.R" />

        <import type="android.view.View" />

        <variable
                name="viewModel"
                type="se.yverling.wearto.items.ItemsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/items_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/empty_screen_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_small"
                    android:drawablePadding="@dimen/space_default"
                    android:text="@string/no_items_label"
                    android:textAppearance="@android:style/TextAppearance.Material.Subhead"
                    android:visibility="@{viewModel.hasItems ? View.GONE : View.VISIBLE}"
                    app:drawableTopCompat="@drawable/ic_view_headline_secondary_text_48dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="@{viewModel.isImporting ? View.VISIBLE : View.GONE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/items"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="@{viewModel.hasItems ? View.VISIBLE : View.GONE}"
                    app:itemDecoration="@{viewModel.itemDecoration}"
                    app:layoutManager="@{viewModel.layoutManager}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:viewAdapter="@{viewModel.viewAdapter}"
                    tools:listitem="@layout/items_list_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_item_button"
                style="@style/WearTo.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="@dimen/space_large"
                android:layout_marginBottom="@dimen/space_large"
                android:contentDescription="@string/add_item_button_description"
                android:onClick="@{() -> viewModel.addItem()}"
                android:src="@drawable/ic_add_black_24dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
