<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/sync_items_action"
            android:icon="@drawable/ic_sync_white_24dp"
            android:orderInCategory="100"
            android:title="@string/sync_item"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/import_items_action"
            android:orderInCategory="100"
            android:title="@string/import_item"
            app:showAsAction="never" />

    <item
            android:id="@+id/licences_action"
            android:orderInCategory="100"
            android:title="@string/licences"
            app:showAsAction="never" />

    <item
            android:id="@+id/privacy_policy_action"
            android:orderInCategory="100"
            android:title="@string/privacy_policy"
            app:showAsAction="never" />

    <item
            android:id="@+id/logout_action"
            android:orderInCategory="100"
            android:title="@string/logout_item"
            app:showAsAction="never" />
</menu>