...
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewModel.onItemClick()}">

        <TextView
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_default"
                android:layout_marginEnd="@dimen/space_default"
                android:singleLine="true"
                android:text="@{viewModel.itemName}"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                app:layout_constraintBottom_toBottomOf="@+id/project_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/project_name"
                app:layout_constraintTop_toTopOf="@+id/project_name"
                tools:text="Milk" />

        <TextView
...
