...
                app:errorMessage="@{viewModel.itemErrorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textCapSentences"
                    android:text="@={viewModel.name}"
...
                    app:focus="@{true}"
                    app:hint="@{R.string.item_name_hint}"
                    tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_default"
                android:spinnerMode="dialog"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/access_token_edit_layout"
...
